--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "SF Pro"
+  font-family: "SF Pro", sans-serif;
 }
 html,
 body {
@@ -35,7 +35,6 @@ body {
   padding: 0px 20px;
   height: 7vh;
   width: 50vw;
-  background-color: #000;
   color: #fff;
   position: absolute;
   top: 0%;
@@ -43,38 +42,42 @@ body {
   transform: translateX(-50%);
 }
 
-#page > nav >h3{
-    font-weight: 100;
+#page > nav > h3 {
+  font-weight: 100;
 }
 
-#page>video{
-    height: 100%;
-    width: 50%;
-    position: absolute;
-    object-fit: cover;
-    left: 50%;
-    transform: translateX(-50%);
+#page > video {
+  height: 100%;
+  width: 50%;
+  position: absolute;
+  object-fit: cover;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-#page > nav >button{
-    padding: 7px 20px;
-    border-radius: 50px;
-    border: none;
-     background-color: #fff;
+#page > nav > button {
+  padding: 7px 20px;
+  border-radius: 50px;
+  border: none;
+  background-color: #fff;
 }
 
-#page-bottom{
-    height: 20%;
-    width: 25%;
-    background-color: green;
-    position: absolute;
-    bottom: 5%;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+#page-bottom {
+  height: 20%;
+  width: 25%;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#page-bottom > h3 {
+  color: #dadada93;
+  margin-bottom: 1vw;
 }
 
 #page1 {
@@ -82,4 +85,21 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: #fff;
+}
+
+#page1 > video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+#page>h1{
+  font-size: 4vw;
+  color: #fff;
+  font-weight:400;
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
 }
